🐛 fix body overflow on mobile with back gesture

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -39,9 +39,11 @@ div > h3 {
   font-weight: 700;
 }
 
-.no-scroll {
-  overflow: hidden;
-  height: 100%;
+@media (min-width: 649px) {
+  .no-scroll {
+    overflow: hidden;
+    height: 100%;
+  }
 }
 
 .no-scrollbar::-webkit-scrollbar {
